# okhati-medical-store

./: .dockerignore  .gitattributes  .gitignore  .ignore  Dockerfile  LICENSE  README.md  eslint.config.mjs  flake.nix  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  settings.gradle.kts  start.sh  vercel.json  vite.config.ts
.github/workflows/: build.yml  docker-build.yml
app/: build.gradle.kts
backend/: .env.production.template  README.md  main.py  pyproject.toml  schema.dot  setup_supabase.py
backend/auth/: authrouter.py
backend/config/: config.py  database.py  hashing.py  token.py
backend/dto/: orderschema.py  paymentschema.py  productschema.py  reviewschema.py  userschema.py
backend/models/: ordermodels.py  productmodels.py  reviewmodels.py  usermodels.py
backend/order/: orderrouter.py  orderservice.py
backend/payment/: khalti_service.py  paymentsrouter.py
backend/product/: productnltk_sentimen.py  productrouter.py  productservice.py
backend/review/: reviewrouter.py  reviewservice.py
backend/upload/: uploadrouter.py
backend/users/: usersrouter.py  usersservice.py
composeApp/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
postgres/: schema.sql
rr_campus/: index.html  style.css
server/: build.gradle.kts  pyproject.toml
server/src/: main.py
shared/: build.gradle.kts
site/: index.html
src/: App.tsx  index.css  main.tsx
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: footer.tsx  header.tsx
src/hooks/: useClearCartOnPayment.ts
src/lib/: supabase.ts
src/redux/: axiosInterceptor.ts  cart.slice.ts  order.slice.ts  product.slice.ts  store.ts  user.slice.ts
src/screen/: addProduct.tsx  admin.tsx  checkout.tsx  editProduct.tsx  landing.tsx  login.tsx  not-found.tsx  order.tsx  orderInfo.tsx  orderlist.tsx  paymentStatus.tsx  productDetails.tsx  productList.tsx  products.tsx  profile.tsx  signup.tsx  (+1 more)
(+47 files in other folders)
